--- a/contact-us.html
+++ b/contact-us.html
@@ -521,7 +521,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 			<ul class="formlist" id="377674287158067523-form-list">
 				<h2 class="wsite-content-title" style="text-align:left;">Contact Us</h2>
 
-<div class="paragraph">If you do not want to fill this out send a email to contact@maltroncraft.tk</div>
+<div class="paragraph">Sorry, The contact us form is broken, email us at maltroncraft@gmail.com <img src="https://image.ibb.co/n3491T/JPEG_image.jpg" alt="JPEG_image" border="0"></div>
 
 <label class="wsite-form-label wsite-form-fields-required-label"><span class="form-required">*</span> Indicates required field</label><div><div class="wsite-form-field wsite-name-field" style="margin:5px 0px 5px 0px;">
 				<label class="wsite-form-label" for="input-459739130415854660">Name <span class="form-required">*</span></label>
