--- a/contact-us.html
+++ b/contact-us.html
@@ -515,61 +515,56 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
           <div class="container">
 			<div class="wsite-section-elements">
 				<div>
-	<form enctype="multipart/form-data" action="//www.weebly.com/weebly/apps/formSubmit.php" method="POST" id="form-377674287158067523">
-		<div id="377674287158067523-form-parent" class="wsite-form-container"
-				 style="margin-top:10px;">
-			<ul class="formlist" id="377674287158067523-form-list">
-				<h2 class="wsite-content-title" style="text-align:left;">Contact Us</h2>
+	<form name="contactform" method="post" action="send_form_email.php">
+<table width="450px">
+<tr>
+ <td valign="top">
+  <label for="first_name">First Name *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="first_name" maxlength="50" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top"">
+  <label for="last_name">Last Name *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="last_name" maxlength="50" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="email">Email Address *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="email" maxlength="80" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="telephone">Telephone Number</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="telephone" maxlength="30" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="comments">Comments *</label>
+ </td>
+ <td valign="top">
+  <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
+ </td>
+</tr>
+<tr>
+ <td colspan="2" style="text-align:center">
+  <input type="submit" value="Submit">   <a href="http://www.freecontactform.com/email_form.php">Email Form</a>
+ </td>
+</tr>
+</table>
+</form>
 
-<div class="paragraph">Sorry, The contact us form is broken, email us at maltroncraft@gmail.com <img src="https://image.ibb.co/niUZTd/Technical_Difficulties.jpg" alt="Technical_Difficulties" border="0"></div>
-
-<label class="wsite-form-label wsite-form-fields-required-label"><span class="form-required">*</span> Indicates required field</label><div><div class="wsite-form-field wsite-name-field" style="margin:5px 0px 5px 0px;">
-				<label class="wsite-form-label" for="input-459739130415854660">Name <span class="form-required">*</span></label>
-				<div style="clear:both;"></div>
-				<div class="wsite-form-input-container wsite-form-left wsite-form-input-first-name">
-					<input aria-required="true" id="input-459739130415854660" class="wsite-form-input wsite-input" type="text" name="_u459739130415854660[first]" />
-					<label class="wsite-form-sublabel" for="input-459739130415854660">First</label>
-				</div>
-				<div class="wsite-form-input-container wsite-form-right wsite-form-input-last-name">
-					<input aria-required="true" id="input-459739130415854660-1" class="wsite-form-input wsite-input" type="text" name="_u459739130415854660[last]" />
-					<label class="wsite-form-sublabel" for="input-459739130415854660-1">Last</label>
-				</div>
-				<div id="instructions-459739130415854660" class="wsite-form-instructions" style="display:none;"></div>
-			</div>
-			<div style="clear:both;"></div></div>
-
-<div><div class="wsite-form-field" style="margin:5px 0px 5px 0px;">
-				<label class="wsite-form-label" for="input-802219371130429433">Email <span class="form-required">*</span></label>
-				<div class="wsite-form-input-container">
-					<input aria-required="true" id="input-802219371130429433" class="wsite-form-input wsite-input wsite-input-width-370px" type="text" name="_u802219371130429433" />
-				</div>
-				<div id="instructions-802219371130429433" class="wsite-form-instructions" style="display:none;"></div>
-			</div></div>
-
-<div><div class="wsite-form-field" style="margin:5px 0px 5px 0px;">
-				<label class="wsite-form-label" for="input-388794458156375511">Message <span class="form-required">*</span></label>
-				<div class="wsite-form-input-container">
-					<textarea aria-required="true" id="input-388794458156375511" class="wsite-form-input wsite-input wsite-input-width-370px" name="_u388794458156375511" style="height: 200px"></textarea>
-				</div>
-				<div id="instructions-388794458156375511" class="wsite-form-instructions" style="display:none;"></div>
-			</div></div>
-			</ul>
-			
-		</div>
-		<div style="display:none; visibility:hidden;">
-			<input type="text" name="wsite_subject" />
-		</div>
-		<div style="text-align:left; margin-top:10px; margin-bottom:10px;">
-			<input type="hidden" name="form_version" value="2" />
-			<input type="hidden" name="wsite_approved" id="wsite-approved" value="approved" />
-			<input type="hidden" name="ucfid" value="377674287158067523" />
-			<input type="hidden" name="recaptcha_token"/>
-			<input type="submit" style="position:absolute;top:0;left:-9999px;width:1px;height:1px" />
-			<a class="wsite-button">
-				<span class="wsite-button-inner">Submit</span>
-			</a>
-		</div>
-	</form>
 	<div id="g-recaptcha-377674287158067523" class="recaptcha" data-size="invisible" data-recaptcha="0" data-sitekey="6Ldf5h8UAAAAAJFJhN6x2OfZqBvANPQcnPa8eb1C"></div>
 
 
