--- a/contact-us.html
+++ b/contact-us.html
@@ -2,6 +2,14 @@
 <html lang="en">
 	<head><script src="/gdpr/gdprscript.js?buildTime=1234&hasRemindMe=true&stealth=false"></script>
 		<title>Contact Us - MCN - MaltronCraftNetwork</title>
+		
+		
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Contact Us</title>
+<link rel="stylesheet" type="text/css" href="view.css" media="all">
+<script type="text/javascript" src="view.js"></script>
+
+
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
