--- a/contact-us.html
+++ b/contact-us.html
@@ -2,6 +2,14 @@
 <html lang="en">
 	<head><script src="/gdpr/gdprscript.js?buildTime=1234&hasRemindMe=true&stealth=false"></script>
 		<title>Contact Us - MCN - MaltronCraftNetwork</title>
+		
+		
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Contact Us</title>
+<link rel="stylesheet" type="text/css" href="view.css" media="all">
+<script type="text/javascript" src="view.js"></script>
+
+
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -515,61 +523,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
           <div class="container">
 			<div class="wsite-section-elements">
 				<div>
-	<form enctype="multipart/form-data" action="//www.weebly.com/weebly/apps/formSubmit.php" method="POST" id="form-377674287158067523">
-		<div id="377674287158067523-form-parent" class="wsite-form-container"
-				 style="margin-top:10px;">
-			<ul class="formlist" id="377674287158067523-form-list">
-				<h2 class="wsite-content-title" style="text-align:left;">Contact Us</h2>
-
-<div class="paragraph">If you do not want to fill this out send a email to contact@maltroncraft.tk</div>
-
-<label class="wsite-form-label wsite-form-fields-required-label"><span class="form-required">*</span> Indicates required field</label><div><div class="wsite-form-field wsite-name-field" style="margin:5px 0px 5px 0px;">
-				<label class="wsite-form-label" for="input-459739130415854660">Name <span class="form-required">*</span></label>
-				<div style="clear:both;"></div>
-				<div class="wsite-form-input-container wsite-form-left wsite-form-input-first-name">
-					<input aria-required="true" id="input-459739130415854660" class="wsite-form-input wsite-input" type="text" name="_u459739130415854660[first]" />
-					<label class="wsite-form-sublabel" for="input-459739130415854660">First</label>
-				</div>
-				<div class="wsite-form-input-container wsite-form-right wsite-form-input-last-name">
-					<input aria-required="true" id="input-459739130415854660-1" class="wsite-form-input wsite-input" type="text" name="_u459739130415854660[last]" />
-					<label class="wsite-form-sublabel" for="input-459739130415854660-1">Last</label>
-				</div>
-				<div id="instructions-459739130415854660" class="wsite-form-instructions" style="display:none;"></div>
-			</div>
-			<div style="clear:both;"></div></div>
-
-<div><div class="wsite-form-field" style="margin:5px 0px 5px 0px;">
-				<label class="wsite-form-label" for="input-802219371130429433">Email <span class="form-required">*</span></label>
-				<div class="wsite-form-input-container">
-					<input aria-required="true" id="input-802219371130429433" class="wsite-form-input wsite-input wsite-input-width-370px" type="text" name="_u802219371130429433" />
-				</div>
-				<div id="instructions-802219371130429433" class="wsite-form-instructions" style="display:none;"></div>
-			</div></div>
-
-<div><div class="wsite-form-field" style="margin:5px 0px 5px 0px;">
-				<label class="wsite-form-label" for="input-388794458156375511">Message <span class="form-required">*</span></label>
-				<div class="wsite-form-input-container">
-					<textarea aria-required="true" id="input-388794458156375511" class="wsite-form-input wsite-input wsite-input-width-370px" name="_u388794458156375511" style="height: 200px"></textarea>
-				</div>
-				<div id="instructions-388794458156375511" class="wsite-form-instructions" style="display:none;"></div>
-			</div></div>
-			</ul>
-			
-		</div>
-		<div style="display:none; visibility:hidden;">
-			<input type="text" name="wsite_subject" />
-		</div>
-		<div style="text-align:left; margin-top:10px; margin-bottom:10px;">
-			<input type="hidden" name="form_version" value="2" />
-			<input type="hidden" name="wsite_approved" id="wsite-approved" value="approved" />
-			<input type="hidden" name="ucfid" value="377674287158067523" />
-			<input type="hidden" name="recaptcha_token"/>
-			<input type="submit" style="position:absolute;top:0;left:-9999px;width:1px;height:1px" />
-			<a class="wsite-button">
-				<span class="wsite-button-inner">Submit</span>
-			</a>
-		</div>
-	</form>
+<iframe src="contact-us.php" height="800" width="1000"></iframe>
 	<div id="g-recaptcha-377674287158067523" class="recaptcha" data-size="invisible" data-recaptcha="0" data-sitekey="6Ldf5h8UAAAAAJFJhN6x2OfZqBvANPQcnPa8eb1C"></div>
 
 
