--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=maltroncraft.weebly.com" />
+    <meta http-equiv="refresh" content="0; url=http://maltroncraft.weebly.com/" />
   </head>
   <body>
-  If it doesnt redirrect within 10 secconds click the button: <p><a href="maltroncraft.weebly.com">MaltronCraft Network</a></p>
+  If it doesnt redirrect within 10 secconds click the button: <p><a href="http://maltroncraft.weebly.com/">MaltronCraft Network</a></p>
   </body>
 </html>
